feat: implemented "better" camera control. added a new map.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,9 @@
         "level.h": "c",
         "game_struct.h": "c",
         "control.h": "c",
-        "game_def.h": "c"
+        "game_def.h": "c",
+        "stddef.h": "c",
+        "camera.h": "c",
+        "enemy.h": "c"
     }
 }
