feat: Implemented Baisc Level Select Menu.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,6 +25,7 @@
         "stddef.h": "c",
         "camera.h": "c",
         "enemy.h": "c",
-        "main_menu.h": "c"
+        "main_menu.h": "c",
+        "level_select.h": "c"
     }
 }
